# lighthouse

./: .gitignore  README.md  createVerification.js  index-demo.js  index-login.js  lerna.json  package-lock.json  package.json  reqVerification.js
circuits/: package.json
circuits/circom/: lighthouse.circom
circuits/circom/poseidon/: poseidonHasher.circom
circuits/scripts/: fast_build_circucits.sh  rm_circuit_artifacts.sh
client/: package.json
did-demo/: package-lock.json  package.json
ethcode/: truffle-config.js
ethcode/contracts/: Migrations.sol  Ownable.sol  Poseidon.sol  beacon.sol
ethcode/scripts/: compile_sol.sh  deploy_lighthouse_web3.js  start_ganache.sh
ethcode/test/: exceptions.js
lighthouse/: .gitignore
lighthouse/blindsig/: Cargo.toml
lighthouse/blindsig/src/: main.rs
lighthouse/circuits/: package.json
lighthouse/circuits/circom/: IncrementalMerkleTree.circom  eddsaVerifier.circom  lighthouse-base.circom  lighthouse.circom  semaphore-base.circom
lighthouse/circuits/scripts/: build_snarks.sh  rm_circuit_artifacts.sh
lighthouse/client/: index.js  package.json
lighthouse/client/snarks/: snarks_helpers.js  utils.js
lighthouse/contracts/: package.json  truffle-config.js
lighthouse/ethcode/: package.json  truffle-config.js
lighthouse/protocol/: Cargo.toml
lighthouse/protocol/src/: main.rs
lighthouse/protocol/src/edblinddsa_stanisbar/: mod.rs
lighthouse/protocol/src/nizk/: mod.rs
lighthouse/zkp/: .gitignore  abi.json  prepareSnarks.sh  sha256Digester.zok  sha256PreimageProof.zok
www/: index.html  style.css
(+44 files in other folders)
