[package]
name = "protocol"
version = "0.1.0"
authors = ["neo@crypteks <mahdad.baghani@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_core = { version = "0.5", default-features = false }
curve25519-dalek = {version = "3", features = ["serde"]}
ed25519-dalek = {version = "1"}
sha2 = "0.9.3"
serde_json = "1.0.64"
