[package]
name = "protocol"
version = "0.1.0"
authors = ["neo@crypteks <mahdad.baghani@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[feature]
[dependencies]
rand_0_3 = { version = "~0.3.23", package = "rand" }
rand_0_8 = { version = "0.8", package = "rand" }
rand_core = { version = "0.5", default-features = false }
num = { version = "0.4.0", features = ["rand"]}
curve25519-dalek = {version = "3", features = ["serde"]}
ed25519-dalek = {version = "1"}
sha2 = "0.9.3"
sha3 = "0.9.1"
serde_json = "1.0.64"
rustc-serialize = "0.3.24"
bn = "0.4.3"